@@ -365,6 +365,13 @@ int main(int argc, char* argv[]) {
     exit(STATUS_INVALID_OPTION_COMBINATION);
   }
 
+  // skip encoding and specifying encoding
+  if (isoption(options, OPTION_SKIP_ENCODING) && isoption(options, OPTION_TEXT_ENCODING)) {
+
+    std::cerr << NAME << ": Options for skipping encoding and specifying source encoding are incompatible.\n";
+    exit(STATUS_INVALID_OPTION_COMBINATION);
+  }
+
   try {
 
     // setup for processing
