@@ -1,6 +1,8 @@
 CHANGES
 
 Trunk
+	Detect incompatible options with encoding.
+
 	Change short flag of new option and improve help messages.
 
 	Add xml encoding to verbose output.
